--- a/kingWeb/kingWeb/templates/adm/user/department.html
+++ b/kingWeb/kingWeb/templates/adm/user/department.html
@@ -13,7 +13,7 @@
         })
 
         var departmentId = "";
-        var table_user;
+        var lkTable;
 
         var zNodes_department = [];
         var setting_department= {
@@ -34,7 +34,7 @@
         function onNodeClick( treeId, treeNode, clickFlag) {
             departmentId = treeNode.id;
             LoadDataTable();
-            table_user.draw();
+            lkTable.draw();
         }
 
         function InitDepartmentTree() {
@@ -74,11 +74,11 @@
                 },
                 { "mData": "rownum", "sClass": "text-center" },
                 { "mData": "user__username","sClass": "text-center" },
-                { "mData": "realname",  "sClass": "text-center" },
+                { "mData": "personname",  "sClass": "text-center" },
                 { "mData": "user__email", "sClass": "text-center", "bSortable": false },
                 { "mData": "status",  "sClass": "text-center" }
             ];
-            table_user = lkWeb.LoadTable("table_user", columns, dataUrl, departmentId)
+            lkTable = lkWeb.LoadTable("lkTable", columns, dataUrl, departmentId)
          }
 
         function DelUser() {
@@ -102,7 +102,7 @@
                         success: function (result) {
                             if (result.flag == true) {
                                 parent.layer.alert("删除成功")
-                                table_user.draw(false);
+                                lkTable.draw(false);
                             }
                             else {
                                 parent.layer.alert("删除失败");
@@ -120,12 +120,12 @@
         }
 
         function AddUser() {
-            lkWeb.GoAction("adm","user", "select_user", departmentId, true, "选择用户", "80%", "80%");
+            lkWeb.GoAction("adm","user", "select_user", departmentId, true, "选择用户", "90%", "90%");
         }
         //这个函数给 SelectUser子页面回调用
         function SelectUser() {
             lkWeb.CloseLayert();
-            table_user.draw();
+            lkTable.draw();
         }
 
     </script>
@@ -156,7 +156,7 @@
                     <button type="button" class="btn btn-success" onclick="AddUser()">添加</button>
                     <button type="button" class="btn btn-danger" onclick="DelUser()">删除</button>
                 </div>
-                <table class="table table-striped table-hover" id="table_user">
+                <table class="table table-striped table-hover" id="lkTable">
                     <thead>
                         <tr>
                             <th>
