--- a/kingWeb/kingWeb/templates/adm/department/edit.html
+++ b/kingWeb/kingWeb/templates/adm/department/edit.html
@@ -3,11 +3,11 @@
 
 {% block scripts %}
     <script type="text/javascript">
-        $(function () {
-            lkWeb.FormValidation($("#lkForm"), function () {
-                lkWeb.GoAction("adm","department", "index")
-            }, "操作成功")
-        })
+    $(function () {
+        lkWeb.FormValidation($("#lkForm"), function () {
+            lkWeb.RefreshAndClose()
+        }, "操作成功")
+    })
     </script>
 {% endblock %}
 
@@ -56,7 +56,7 @@
     <div class="form-group">
         <div class="col-md-3 col-md-offset-3">
             <button type="submit" class="btn btn-success">保存</button>
-            <button type="button" class="btn btn-default" onclick="history.go(-1)">
+            <button type="button" class="btn btn-default" onclick="lkWeb.RefreshAndClose()">
                 返回
             </button>
         </div>
