--- a/kingWeb/kingWeb/templates/adm/department/index.html
+++ b/kingWeb/kingWeb/templates/adm/department/index.html
@@ -3,56 +3,56 @@
 
 {% block scripts %}
     <script>
-        var departmentId = "";
-        $(function () {
-            InitDataTable();
+    var departmentId = "";
+    $(function () {
+        InitDataTable();
 
-            $(".checkAll").click(function () {
-                var check = $(this).prop("checked");
-                $(".checkChild").prop("checked", check);
-            });
-
-            $("#btnSearch").click(function () {
-                lkWeb.Search($("#txtSearchKey").val(), lkTable);
-
-            })
+        $(".checkAll").click(function () {
+            var check = $(this).prop("checked");
+            $(".checkChild").prop("checked", check);
         });
 
-        function AddModel() {
-            lkWeb.GoAction("adm","department", "add");;
-        }
-        function EditModel() {
-            var id = lkWeb.GetCheckValue($(".checkChild"));
-            if (id == "")
-                parent.layer.alert("请选择");
-            else
-                lkWeb.GoAction("adm","department", "edit", id);
-        }
+        $("#btnSearch").click(function () {
+            lkWeb.Search($("#txtSearchKey").val(), lkTable);
 
-        function DelModel() {
-            var ids = lkWeb.GetCheckValueList($(".checkChild"));
-            lkWeb.DeleteMulti("adm",ids, "department", lkTable);
-        }
+        })
+    });
 
-        var lkTable;
-        function InitDataTable() {
-            var dataUrl = '/adm/department/get_page_data/';
-            var columns = [
-                {
-                    "sClass": "text-center",
-                    "mData": "id",
-                    "mRender": function (data, type, row) {
-                        return '<input type="checkbox" class="checkChild"  value="' + data + '" />';
-                    },
-                    "bSortable": false
+    function AddModel() {
+        lkWeb.GoAction("adm", "department", "add", 0, true, '添加', '90%', '90%');;
+    }
+    function EditModel() {
+        var id = lkWeb.GetCheckValue($(".checkChild"));
+        if (id == "")
+            parent.layer.alert("请选择");
+        else
+            lkWeb.GoAction("adm", "department", "edit", id, true, '编辑', '90%', '90%');
+    }
+
+    function DelModel() {
+        var ids = lkWeb.GetCheckValueList($(".checkChild"));
+        lkWeb.DeleteMulti("adm", ids, "department", lkTable);
+    }
+
+    var lkTable;
+    function InitDataTable() {
+        var dataUrl = '/adm/department/get_page_data/';
+        var columns = [
+            {
+                "sClass": "text-center",
+                "mData": "id",
+                "mRender": function (data, type, row) {
+                    return '<input type="checkbox" class="checkChild"  value="' + data + '" />';
                 },
-                { "mData": "rownum", "sClass": "text-center" },
-                { "mData": "name","name":"name" "sClass": "text-center" },
-                { "mData": "parentname", "sClass": "text-center" },
-                { "mData": "leader","name":"leader" "sClass": "text-center" },
-                { "mData": "description", "sClass": "text-center" }
-            ];
-            lkTable = lkWeb.LoadTable("lkTable", columns, dataUrl)
+                "bSortable": false
+            },
+            { "mData": "rownum", "sClass": "text-center" },
+            { "mData": "name", "name": "name", "sClass": "text-center" },
+            { "mData": "parentname", "sClass": "text-center" },
+            { "mData": "leader", "name": "leader", "sClass": "text-center" },
+            { "mData": "description", "sClass": "text-center" }
+        ];
+        lkTable = lkWeb.LoadTable("lkTable", columns, dataUrl)
     }
 
 
