--- a/kingWeb/kingWeb/templates/adm/menu/edit.html
+++ b/kingWeb/kingWeb/templates/adm/menu/edit.html
@@ -6,7 +6,7 @@
     <script type="text/javascript">
     $(function () {
         lkWeb.FormValidation($("#lkForm"), function () {
-            lkWeb.GoAction("adm", "menu", "index")
+            lkWeb.RefreshAndClose()
         }, "操作成功")
 
         $("#menuList").focusin(function () {
@@ -23,7 +23,7 @@
                 },
                 effectiveFields: ["parentname", "id", "name", "typename", "url"],
                 getDataMethod: "url",
-                url: "/adm/menu/get_list/", //最后一个参数为关键字请求参数
+                url: "/adm/menu/get_list/?searchKey=", //最后一个参数为关键字请求参数
                 idField: "id",
                 keyField: "name"
             }).on('onDataRequestSuccess', function (e, result) {
@@ -115,7 +115,7 @@
     <div class="form-group">
         <div class="col-md-3 col-md-offset-3">
             <button type="submit" class="btn btn-success">确定</button>
-            <button type="button" class="btn btn-default" onclick="history.go(-1)">返回</button>
+            <button type="button" class="btn btn-default" onclick="lkWeb.RefreshAndClose()">返回</button>
         </div>
     </div>
 </form>
