--- a/kingWeb/kingWeb/templates/adm/module/edit.html
+++ b/kingWeb/kingWeb/templates/adm/module/edit.html
@@ -6,7 +6,7 @@
     <script type="text/javascript">
         $(function () {
             lkWeb.FormValidation($("#lkForm"), function () {
-                lkWeb.GoAction("adm","module", "index")
+                lkWeb.RefreshAndClose()
             }, "操作成功")
         })
 
@@ -30,16 +30,16 @@
     <div class="form-group">
         <label class="col-md-3 control-label">模块描述</label>
         <div class="col-md-7">
-            <textarea type="text" class="form-control" name="Description" value="{{module}}"
+            <textarea type="text" class="form-control" name="Description"
                       data-val="true" data-val-maxlength="模块描述长度不能超过100个字符" data-val-maxlength-max="100"
-                      data-val-required="模块描述不能为空" rows="3"></textarea>
+                      data-val-required="模块描述不能为空" rows="3">{{description}}</textarea>
             <span class="field-validation-valid" data-valmsg-for="Description" data-valmsg-replace="true"></span>
         </div>
     </div>
     <div class="form-group">
         <div class="col-md-3 col-md-offset-3">
             <button type="submit" class="btn btn-success">确定</button>
-            <button type="button" class="btn btn-default" onclick="history.go(-1)">返回</button>
+            <button type="button" class="btn btn-default" onclick="lkWeb.RefreshAndClose()">返回</button>
         </div>
     </div>
 </form>
