--- a/kingWeb/kingWeb/templates/adm/module/index.html
+++ b/kingWeb/kingWeb/templates/adm/module/index.html
@@ -18,14 +18,14 @@
     });
 
     function AddModel() {
-        lkWeb.GoAction("adm", "module", "add", 0);
+        lkWeb.GoAction("adm", "module", "add", 0,true,'添加','90%','90%');
     }
     function EditModel() {
         var id = lkWeb.GetCheckValue($(".checkChild"));
         if (id == "")
             parent.layer.alert("请选择");
         else
-            lkWeb.GoAction("adm", "module", "edit", id);
+            lkWeb.GoAction("adm", "module", "edit", id,true,'编辑','90%','90%');
     }
 
     function DelModel() {
