--- a/kingWeb/kingWeb/templates/adm/role/add.html
+++ b/kingWeb/kingWeb/templates/adm/role/add.html
@@ -5,7 +5,7 @@
     <script type="text/javascript">
         $(function () {
             lkWeb.FormValidation($("#lkForm"), function () {
-                lkWeb.GoAction("adm","role", "index")
+                lkWeb.RefreshAndClose()
             }, "操作成功")
         })
 
@@ -39,7 +39,7 @@
     <div class="form-group">
         <div class="col-md-3 col-md-offset-3">
             <button type="submit" class="btn btn-success">确定</button>
-            <button type="button" class="btn btn-default" onclick="history.go(-1)">返回</button>
+            <button type="button" class="btn btn-default" onclick="lkWeb.RefreshAndClose()">返回</button>
         </div>
     </div>
 </form>
