--- a/kingWeb/kingWeb/templates/adm/system_option/add.html
+++ b/kingWeb/kingWeb/templates/adm/system_option/add.html
@@ -3,11 +3,11 @@
 {% block scripts %}
 
     <script type="text/javascript">
-        $(function () {
-            lkWeb.FormValidation($("#lkForm"), function () {
-                lkWeb.GoAction("adm","systemoption", "index")
-            }, "操作成功")
-        })
+    $(function () {
+        lkWeb.FormValidation($("#lkForm"), function () {
+            lkWeb.RefreshAndClose()
+        }, "操作成功")
+    })
 
     </script>
 {% endblock %}
@@ -36,7 +36,7 @@
     <div class="form-group">
         <div class="col-md-3 col-md-offset-3">
             <button type="submit" class="btn btn-success">确定</button>
-            <button type="button" class="btn btn-default" onclick="history.go(-1)">返回</button>
+            <button type="button" class="btn btn-default" onclick="lkWeb.RefreshAndClose()">返回</button>
         </div>
     </div>
 </form>
