--- a/kingWeb/kingWeb/templates/adm/table_column/edit.html
+++ b/kingWeb/kingWeb/templates/adm/table_column/edit.html
@@ -8,7 +8,7 @@
         $("[data-toggle='tooltip']").tooltip();
 
         lkWeb.FormValidation($("#lkForm"), function () {
-            lkWeb.GoAction("adm", "tablecolumn", "index")
+            lkWeb.RefreshAndClose()
         }, "操作成功")
     })
 
@@ -137,7 +137,7 @@
     <div class="form-group">
         <div class="col-md-3 col-md-offset-3">
             <button type="submit" class="btn btn-success">确定</button>
-            <button type="button" class="btn btn-default" onclick="history.go(-1)">返回</button>
+            <button type="button" class="btn btn-default" onclick="lkWeb.RefreshAndClose()">返回</button>
         </div>
     </div>
 </form>
