--- a/kingWeb/kingWeb/templates/adm/table_list/add.html
+++ b/kingWeb/kingWeb/templates/adm/table_list/add.html
@@ -7,7 +7,7 @@
         $("[data-toggle='tooltip']").tooltip();
 
         lkWeb.FormValidation($("#lkForm"), function () {
-            lkWeb.GoAction("adm", "tablelist", "index")
+            lkWeb.RefreshAndClose()
         }, "操作成功")
     })
 
@@ -111,19 +111,19 @@
     <div class="form-group">
         <label class="col-md-2 control-label">默认过滤条件</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="DefaultFilter" data-toggle="tooltip" title="例如: Id != 10" />
+            <input type="text" class="form-control" name="DefaultFilter" data-toggle="tooltip" title="例如: Id != 10 ,可选参数{UserId}" />
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">扩展方法</label>
         <div class="col-md-7">
-            <textarea class="form-control" name="ExtendFunction" rows="3" data-toggle="tooltip" title="{Id}为Id,{UserId}为UserId"></textarea>
+            <textarea class="form-control" name="ExtendFunction" rows="3" data-toggle="tooltip" title="可选参数:{Id},{UserId}"></textarea>
         </div>
     </div>
     <div class="form-group">
         <div class="col-md-3 col-md-offset-3">
             <button type="submit" class="btn btn-success">确定</button>
-            <button type="button" class="btn btn-default" onclick="history.go(-1)">返回</button>
+            <button type="button" class="btn btn-default" onclick="lkWeb.RefreshAndClose()">返回</button>
         </div>
     </div>
 </form>
