--- a/kingWeb/kingWeb/templates/adm/table_list/edit.html
+++ b/kingWeb/kingWeb/templates/adm/table_list/edit.html
@@ -6,7 +6,7 @@
     $(function () {
         $("[data-toggle='tooltip']").tooltip();
         lkWeb.FormValidation($("#lkForm"), function () {
-            lkWeb.GoAction("adm", "tablelist", "index")
+            lkWeb.RefreshAndClose()
         }, "操作成功")
     })
 
@@ -48,7 +48,7 @@
         </div>
         <label class="col-md-2 control-label">添加是否允许</label>
          <div class="col-md-4">
-             <input type="text" class="form-control" name="AllowAdd" data-toggle="tooltip" title="1 or 0" />
+             <input type="text" class="form-control" name="AllowAdd" value="{{allowadd}}" data-toggle="tooltip" title="1 or 0" />
          </div>
     </div>
     <div class="form-group">
@@ -112,19 +112,19 @@
     <div class="form-group">
         <label class="col-md-2 control-label">默认过滤条件</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="DefaultFilter" value="{{defaultfilter}}" data-toggle="tooltip" title="例如: Id != 1000" />
+            <input type="text" class="form-control" name="DefaultFilter" value="{{defaultfilter}}" data-toggle="tooltip" title="例如: Id != 100,可选参数{UserId}" />
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">扩展方法</label>
         <div class="col-md-7">
-            <textarea class="form-control" name="ExtendFunction" rows="3" data-toggle="tooltip" title="{Id}为Id,{UserId}为UserId">{{extendfunction}}</textarea>
+            <textarea class="form-control" name="ExtendFunction" rows="3" data-toggle="tooltip" title="可选参数:{Id},{UserId}">{{extendfunction}}</textarea>
         </div>
     </div>
     <div class="form-group">
         <div class="col-md-3 col-md-offset-3">
             <button type="submit" class="btn btn-success">确定</button>
-            <button type="button" class="btn btn-default" onclick="history.go(-1)">返回</button>
+            <button type="button" class="btn btn-default" onclick="lkWeb.RefreshAndClose()">返回</button>
         </div>
     </div>
 </form>
