--- a/kingWeb/kingWeb/templates/adm/viewlist/add.html
+++ b/kingWeb/kingWeb/templates/adm/viewlist/add.html
@@ -5,7 +5,8 @@
     <script type="text/javascript">
         $(function () {
             lkWeb.FormValidation($("#lkForm"), function () {
-                lkWeb.GoAction("adm","viewlist", "index","{{tableid}}")
+                //lkWeb.GoAction("adm","viewlist", "index","{{tableid}}")
+                lkWeb.RefreshAndClose()
             }, "操作成功")
         })
 
@@ -27,7 +28,7 @@
                                     {% for key,value in out_col_data.items %}
                                         {% if key == col.name%}
                                             {% for item in value%}
-                                                  <option value="{{item.Id}}">{{item.Name}}</option>
+                                                  <option value="{{item.value}}">{{item.text}}</option>
                                             {% endfor %}
                                         {% endif %}
                                     {% endfor %}
@@ -70,7 +71,7 @@
     <div class="form-group">
         <div class="col-md-3 col-md-offset-3">
             <button type="submit" class="btn btn-success">确定</button>
-            <button type="button" class="btn btn-default" onclick="history.go(-1)">返回</button>
+            <button type="button" class="btn btn-default" onclick="lkWeb.RefreshAndClose()">返回</button>
         </div>
     </div>
 </form>
