--- a/kingWeb/kingWeb/templates/adm/viewlist/index.html
+++ b/kingWeb/kingWeb/templates/adm/viewlist/index.html
@@ -61,14 +61,14 @@
         });
 
         function AddModel() {
-            lkWeb.GoAction("adm","viewlist", "add",tableid);
+            lkWeb.GoAction("adm","viewlist", "add",tableid,true,'添加','90%','90%');
         }
         function EditModel() {
             var id = lkWeb.GetCheckValue($(".checkChild"));
             if (id == "")
                 parent.layer.alert("请选择");
             else
-                lkWeb.GoAction("adm","viewlist", "edit", id+"/" + tableid);
+                lkWeb.GoAction("adm","viewlist", "edit", id+"/" + tableid,true,'编辑','90%','90%');
         }
         function Detail() {
                   var id = lkWeb.GetCheckValue($(".checkChild"));
