--- a/kingWeb/kingWeb/templates/adm/viewlist/index.html
+++ b/kingWeb/kingWeb/templates/adm/viewlist/index.html
@@ -174,7 +174,7 @@
 
 <div class="form-group">
 
-        {% if table.allowview == 1 %}
+        {% if table.allowdetail == 1 %}
             <button type="button" class="btn btn-success" onclick="Detail()">查看详情</button>
         {% endif %}
 
