--- a/kingWeb/kingWeb/templates/adm/table_list/edit.html
+++ b/kingWeb/kingWeb/templates/adm/table_list/edit.html
@@ -40,6 +40,10 @@
         <div class="col-md-4">
             <input type="text" class="form-control" name="DeleteTableName" value="{{deletetablename}}" data-toggle="tooltip" title="一般为此表名" />
         </div>
+        <label class="col-md-2 control-label">详情是否允许</label>
+        <div class="col-md-4">
+            <input type="text" class="form-control" name="AllowDetail" value="{{allowdetail}} data-toggle="tooltip" title="1 or 0" />
+        </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">查看是否允许</label>
