--- a/kingWeb/kingWeb/templates/adm/table_list/edit.html
+++ b/kingWeb/kingWeb/templates/adm/table_list/edit.html
@@ -42,7 +42,7 @@
         </div>
         <label class="col-md-2 control-label">详情是否允许</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="AllowDetail" value="{{allowdetail}} data-toggle="tooltip" title="1 or 0" />
+            <input type="text" class="form-control" name="AllowDetail" value="{{allowdetail}}" data-toggle="tooltip" title="1 or 0" />
         </div>
     </div>
     <div class="form-group">
