--- a/kingWeb/kingWeb/templates/adm/Shared/layout.html
+++ b/kingWeb/kingWeb/templates/adm/Shared/layout.html
@@ -53,7 +53,7 @@
                 <a><span class="fa fa-telegram"></span></a>
                 <a><span class="fa fa-lock"></span></a>
                 <a><span class="fa fa-desktop"></span></a>
-                <a href="/Home/Logout"><span class="fa fa-power-off"></span></a>
+                <a href="/adm/user/logout"><span class="fa fa-power-off"></span></a>
             </div>
         </nav>
         <!-- 左侧导航栏结束 -->
