--- a/kingWeb/kingWeb/templates/adm/table_column/add.html
+++ b/kingWeb/kingWeb/templates/adm/table_column/add.html
@@ -118,7 +118,7 @@
     <div class="form-group">
         <label class="col-md-2 control-label">外部SQL</label>
         <div class="col-md-7">
-            <textarea class="form-control" name="OutSql" rows="3" data-toggle="tooltip" title="例如Id,Name|Sys_Department|ParentId=0 (主键,列名|表名|条件)"></textarea>
+            <textarea class="form-control" name="OutSql" rows="3" data-toggle="tooltip" title="例如Id,Name|Sys_Department|ParentId=0 (主键,列名|表名|条件) 可选参数{UserId}"></textarea>
         </div>
     </div>
     <div class="form-group">
