--- a/kingWeb/kingWeb/templates/adm/table_column/edit.html
+++ b/kingWeb/kingWeb/templates/adm/table_column/edit.html
@@ -121,7 +121,7 @@
         <label class="col-md-2 control-label">外部SQL</label>
         <div class="col-md-7">
             <textarea class="form-control" name="OutSql" rows="3" data-toggle="tooltip"
-                      title="例如Id,Name|Sys_Department|ParentId=0 (主键,列名|表名|条件)">{{outsql}}</textarea>
+                      title="例如Id,Name|Sys_Department|ParentId=0 (主键,列名|表名|条件) 可选参数{UserId}">{{outsql}}</textarea>
         </div>
     </div>
     <div class="form-group">
