--- a/kingWeb/kingWeb/templates/adm/Shared/layout.html
+++ b/kingWeb/kingWeb/templates/adm/Shared/layout.html
@@ -41,8 +41,10 @@
                            <ul id="a{{module.id}}" class="nav nav-list collapse menu-second">
                            {% for menu in menus %}
                                 {% if menu.parentid == module.id %}
-                                 <li><a data-index="{{menu.listorder}}" data-url="{{menu.url}}" class="J_menuItem">
+                                   {% if menu.name != '基础数据菜单权限'%}
+                                  <li><a data-index="{{menu.listorder}}" data-url="{{menu.url}}" class="J_menuItem">
                                     <i class="fa fa-chevron-right"></i>{{menu.name}}</a></li>
+                               {% endif %}
                                 {% endif %}
                            {% endfor %}
                             </ul>
