--- a/kingWeb/kingWeb/static/css/site.css
+++ b/kingWeb/kingWeb/static/css/site.css
@@ -29,7 +29,7 @@ textarea { resize: none; }
 
     .title a { text-decoration: none; color: white; }
 
-.profile { padding-left: 15px; color: white; font-size: 20px; height: 200px; }
+.profile { padding-left: 15px; color: white; font-size: 1.5em; height: 200px; }
 
 .profile_img { width: 85px; height: 85px; border: 5px solid #FFF; }
 
