--- a/kingWeb/kingWeb/templates/adm/Shared/layout.html
+++ b/kingWeb/kingWeb/templates/adm/Shared/layout.html
@@ -17,12 +17,24 @@
     <link rel="stylesheet" href="{%static 'css/site.css'%}"   />
     <link href="{%static 'lib/datatables/media/css/jquery.dataTables.min.css'%}" rel="stylesheet" />
     {% block styles %}   {% endblock %}
+    <style>
+        .miniMenu{
+            width:50px;
+        }
+        .miniMenu title{
+            display:none;
+        }
+    </style>
+    <script type="text/javascript">
+        function collapseMenu() {
 
+        }
+    </script>
 </head>
 <body>
     <div id="wrapper">
         <!-- 左侧导航栏开始-->
-        <nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper" role="navigation">
+        <nav class="navbar navbar-inverse navbar-fixed-top miniMenu" id="sidebar-wrapper" role="navigation">
             <div class="navbar-header profile">
                 <h2 class="title"><a href="#">lkWeb </a></h2>
                 <img src="{%static 'images/head.jpg'%}" alt="..." class="img-circle profile_img">
@@ -52,7 +64,7 @@
             </div>
 
             <div class="sidebar-footer">
-                <a><span class="fa fa-telegram"></span></a>
+                <a><span class="fa fa-reorder" onclick="collapseMenu()"></span></a>
                 <a><span class="fa fa-lock"></span></a>
                 <a><span class="fa fa-desktop"></span></a>
                 <a href="/adm/user/logout"><span class="fa fa-power-off"></span></a>
