--- a/kingWeb/kingWeb/static/css/site.css
+++ b/kingWeb/kingWeb/static/css/site.css
@@ -31,7 +31,7 @@ textarea { resize: none; }
 
 .profile { padding-left: 15px; color: white; font-size: 1.5em; height: 200px; }
 
-.profile_img { width: 85px; height: 85px; border: 5px solid #FFF; }
+.profile-img { width: 85px; height: 85px; border: 5px solid #FFF; }
 
 #sidebar-wrapper { width: 200px; height: 100%; z-index: 1000; }
 
