--- a/kingWeb/kingWeb/static/css/site.css
+++ b/kingWeb/kingWeb/static/css/site.css
@@ -1,5 +1,4 @@
-#wrapper, html { height: 100%; }
-
+#wrapper, html { height: 100%; min-width: 500px; }
 body { padding-bottom: 20px; height: 100%; background-color: #f1f1f1; }
 
     body::-webkit-scrollbar { width: 10px; height: 10px; }
