--- a/kingWeb/kingWeb/templates/adm/table_list/add.html
+++ b/kingWeb/kingWeb/templates/adm/table_list/add.html
@@ -125,6 +125,12 @@
         </div>
     </div>
     <div class="form-group">
+        <label class="col-md-2 control-label">顶部扩展方法</label>
+        <div class="col-md-7">
+            <textarea class="form-control" name="TopExtendFunction" rows="3" data-toggle="tooltip" title="可选参数:{UserId}"></textarea>
+        </div>
+    </div>
+    <div class="form-group">
         <div class="col-md-3 col-md-offset-3">
             <button type="submit" class="btn btn-success">确定</button>
             <button type="button" class="btn btn-default" onclick="lkWeb.RefreshAndClose()">返回</button>
